2010-04-30	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libfs/src/dosfs/msdos_format.c: Added missing va_end().

2010-04-30	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libblock/src/bdpart.c: Removed file.
	* libblock/src/bdpart-create.c, libblock/src/bdpart-dump.c,
	libblock/src/bdpart-mount.c, libblock/src/bdpart-read.c,
	libblock/src/bdpart-register.c, libblock/src/bdpart-sort.c,
	libblock/src/bdpart-write.c: New files.
	* libblock/include/rtems/bdpart.h: Moved some definitions from bdpart.c.
	* libblock/Makefile.am: Update for file changes.

2010-04-30	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* sapi/inline/rtems/chain.inl: Added missing functions.

2010-04-30	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* posix/src/alarm.c, posix/src/psignal.c, posix/src/ualarm.c:
	Moved watchdog control objects to reduce dependencies.

2010-04-29	Sebastian Huber <sebastian.huber@embedded-brains.de>

	PR 1507/filesystem
	* libblock/src/bdbuf.c: Avoid NULL pointer access.

	* libblock/src/diskdevs.c: Fixed bounds check in rtems_disk_next().

2010-04-29	Ralf Corsépius <ralf.corsepius@rtems.org>

	* librpc/src/rpc/clnt_udp.c, librpc/src/xdr/xdr_mem.c:
	Use [u]intptr_t instead of [u_]long for better 16bit compliance.

2010-04-29	Ralf Corsépius <ralf.corsepius@rtems.org>

	* aclocal/enable-itron.m4, aclocal/check-itron.m4: Replace
	RTEMS_HAS_ITRON_API with enable_itron.
	* librpc/src/rpc/pmap_rmt.c: Use uintptr_t for better 16bit
	compliance.

2010-04-29	Ralf Corsépius <ralf.corsepius@rtems.org>

	* aclocal/enable-itron.m4: Cosmetics.
	* httpd/Makefile.am: Use LIBHTTPD.
	* shttpd/Makefile.am: Use LIBSHTTPD.
	* configure.ac: Add RTEMS_ENABLE_SHTTPD, RTEMS_ENABLE_HTTPD.
	Introduce AM_CONDITIONALS LIBHTTPD, LIBSHTTPD.
	* aclocal/enable-httpd.m4, aclocal/enable-shttpd.m4: New.

2010-04-29	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libnetworking/libc/map_v4v6.c: Use uintptr_t instead of u_long for
	better 16bit target compliance.
